Fix Vercel runtime configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,11 @@
 {
-  "version": 2,
-  "name": "ledgeriq-dashboard",
   "buildCommand": "npm run build",
   "outputDirectory": "dist/public",
   "installCommand": "npm install",
   "devCommand": "npm run dev",
   "functions": {
     "api/**/*.ts": {
-      "runtime": "@vercel/node"
+      "runtime": "@vercel/node@3.0.0"
     }
   },
   "rewrites": [
